# html-to-mrkdwn-go

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  bazel-bin  bazel-html-to-mrkdwn-go  bazel-out  bazel-testlogs  go.mod  go.sum  mrkdwn.go  mrkdwn_test.go
.github/workflows/: test.yaml
example/: BUILD.bazel  main.go
fixtures/: nested-unordered-list.mrkdwn  sample.mrkdwn
