load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/matsubara0507/html-to-mrkdwn-go
gazelle(name = "gazelle")

filegroup(
    name = "fixtures",
    srcs = glob(["html-to-mrkdwn/test/fixtures/*.mrkdwn"]),
)

go_library(
    name = "html-to-mrkdwn-go",
    srcs = ["mrkdwn.go"],
    importpath = "github.com/matsubara0507/html-to-mrkdwn-go",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/mattn/godown"],
)

go_test(
    name = "html-to-mrkdwn-go_test",
    srcs = ["mrkdwn_test.go"],
    data = [":fixtures"],
    embed = [":html-to-mrkdwn-go"],
)
